SYNCOPE-1506: Merge Accounts (#153)
* initial pass at merging users/accounts

* clean up config; working on wizard and user selection

* clean up config; working on wizard and user selection

* polish

* working on account review wizard page

* working on batch items

* working on batch requests

* testing batch ops

* fix tests

* fix test

* fix formatting issues

* apply changes based on review suggestions

* working on ITs for merge-accounts feature

* updated test

* adjustments to query filter

* tweaks to UI

* cntd with wicket changes and merging functionality

* working on merge wizard. added panels to show resources, and preview

* add panel for preview

* polish

* polish

* cntd with tests - wip

* addressing feedback after review - tests WIP.

* fix issues after review

* highlight item when selected in data table

* work out events with item selection after the merge

* fix tests - let ci run

* fix checkstyle